--- a/index.html
+++ b/index.html
@@ -42,6 +42,46 @@
     </section>
   </header>
 
+  <main>
+    <section class="description">
+      <div class="text-description">
+        <h2> What’s different about Manage?</h2>
+        <p> Manage provides all the functionality your team needs, without
+          the complexity. Our software is tailor-made for modern digital
+          product teams. </p>
+      </div>
+      <div class="list-description">
+        <div class="list-point">
+          <div class="point-tag">
+            <p class="tag-p">01</p>
+          </div>
+          <p class="point-title">Track company-wide progress</p>
+          <p class="point-description">See how your day-to-day tasks fit into the wider vision. Go from
+            tracking progress at the milestone level all the way done to the
+            smallest of details. Never lose sight of the bigger picture again.</p>
+        </div>
+        <div class="list-point">
+          <div class="point-tag">
+            <p class="tag-p">02</p>
+          </div>
+          <p class="point-title">Advanced built-in reports</p>
+          <p class="point-description">Set internal delivery estimates and track progress toward company
+            goals. Our customisable dashboard helps you build out the reports
+            you need to keep key stakeholders informed.</p>
+        </div>
+        <div class="list-point">
+          <div class="point-tag">
+            <p class="tag-p">03</p>
+          </div>
+          <p class="point-title">Everything you need in one place</p>
+          <p class="point-description">Stop jumping from one service to another to communicate, store files,
+            track tasks and share documents. Manage offers an all-in-one team
+            productivity solution.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
   <!-- Navbar on small screens -->
   <!-- <navmobile class="mobilelist">
       <ul id="linksmobile">
@@ -70,44 +110,7 @@
   <!--
 
   </div>
-  Pricing
-  Product
-  About Us
-  Careers
-  Community
-
-  Get Started
-
-  Bring everyone together to build better products.
-
-  Manage makes it simple for software teams to plan day-to-day 
-  tasks while keeping the larger team goals in view.
-
-  Get Started
-
-  What’s different about Manage?
-
-  Manage provides all the functionality your team needs, without 
-  the complexity. Our software is tailor-made for modern digital 
-  product teams. 
-
-  01
-  Track company-wide progress
-  See how your day-to-day tasks fit into the wider vision. Go from 
-  tracking progress at the milestone level all the way done to the 
-  smallest of details. Never lose sight of the bigger picture again.
-
-  02
-  Advanced built-in reports
-  Set internal delivery estimates and track progress toward company 
-  goals. Our customisable dashboard helps you build out the reports 
-  you need to keep key stakeholders informed.
-
-  03
-  Everything you need in one place
-  Stop jumping from one service to another to communicate, store files, 
-  track tasks and share documents. Manage offers an all-in-one team 
-  productivity solution.
+ 
 
   What they’ve said
 
