add main people section ->raw html

--- a/index.html
+++ b/index.html
@@ -96,7 +96,37 @@
       </div>
     </section>
 
-
+    <section class="people">
+      <h2 class="people-title">What they’ve said</h2>
+      <div class="people-desc">
+        <div class="person">
+          <img src="./images/avatar-anisha.png" alt="avatar-anisha">
+          <p class="name"> Anisha Li</p>
+          <p class="person-desc">“Manage has supercharged our team’s workflow. The ability to maintain
+            visibility on larger milestones at all times keeps everyone motivated.”</p>
+        </div>
+        <div class="person">
+          <img src="./images/avatar-ali.png" alt="avatar-ali">
+          <p class="name">Ali Bravo</p>
+          <p class="person-desc"> “We have been able to cancel so many other subscriptions since using
+            Manage. There is no more cross-channel confusion and everyone is much
+            more focused.”</p>
+        </div>
+        <div class="person">
+          <img src="./images/avatar-richard.png" alt="avatar-richard">
+          <p class="name">Richard Watts </p>
+          <p class="person-desc">“Manage allows us to provide structure and process. It keeps us organized
+            and focused. I can’t stop recommending them to everyone I talk to!”</p>
+        </div>
+        <div class="person">
+          <img src="./images/avatar-shanai.png" alt="avatar-shanai">
+          <p class="name">Shanai Gough</p>
+          <p class="person-desc">“Their software allows us to track, manage and collaborate on our projects
+            from anywhere. It keeps the whole team in-sync without being intrusive.”</p>
+        </div>
+      </div>
+      <a href="#" class="btn"> Get Started</a>
+    </section>
   </main>
 
   <!-- Navbar on small screens -->
@@ -127,29 +157,6 @@
   <!--
 
   </div>
- 
-
-  What they’ve said
-
-  Anisha Li
-  “Manage has supercharged our team’s workflow. The ability to maintain 
-  visibility on larger milestones at all times keeps everyone motivated.”
-
-  Ali Bravo
-  “We have been able to cancel so many other subscriptions since using 
-  Manage. There is no more cross-channel confusion and everyone is much 
-  more focused.”
-
-  Richard Watts
-  “Manage allows us to provide structure and process. It keeps us organized 
-  and focused. I can’t stop recommending them to everyone I talk to!”
-
-  Shanai Gough
-  “Their software allows us to track, manage and collaborate on our projects 
-  from anywhere. It keeps the whole team in-sync without being intrusive.”
-
-  Get Started
-
   Simplify how your team works today.
   Get Started
 
