--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section class="description">
       <!-- Left side of desc -->
       <div class="text-description">
-        <h2> What’s different about<br> Manage?</h2>
+        <h2> What’s different about Manage?</h2>
         <p> Manage provides all the functionality your team needs, without
           the complexity. Our software is tailor-made for modern digital
           product teams. </p>
