add simplify section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,18 @@
       </div>
       <a href="#" class="btn"> Get Started</a>
     </section>
+    <section class="simplify">
+      <h1 class="simplyfy-text"> Simplify how your team works today.</h1>
+      <a href="" class="btn btn-color-reverse">Get Started</a>
+    </section>
   </main>
+  <footer>
+    <div class="footer">
+      <div class=""></div>
+      <div class=""></div>
+      <div class=""></div>
+    </div>
+  </footer>
 
   <!-- Navbar on small screens -->
   <!-- <navmobile class="mobilelist">
@@ -156,9 +167,7 @@
 
   <!--
 
-  </div>
-  Simplify how your team works today.
-  Get Started
+  </div> 
 
   Home
   Pricing
