styled simplify section

--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
       <a href="#" class="btn"> Get Started</a>
     </section>
     <section class="simplify">
-      <h1 class="simplyfy-text"> Simplify how your team works today.</h1>
+      <!-- <div class="simplify-for-image"> -->
+      <h1 class="simplify-text"> Simplify how your team works today.</h1>
       <a href="" class="btn btn-color-reverse">Get Started</a>
+      <!-- </div> -->
     </section>
   </main>
   <footer>
