fixed styles simplify section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <a href="#" class="btn"> Get Started</a>
     </section>
     <section class="simplify">
-      <!-- <div class="simplify-for-image"> -->
+      <div class="simplify-background"> </div>
       <h1 class="simplify-text"> Simplify how your team works today.</h1>
       <a href="" class="btn btn-color-reverse">Get Started</a>
       <!-- </div> -->
