add fotter and first styles

--- a/index.html
+++ b/index.html
@@ -136,9 +136,36 @@
   </main>
   <footer>
     <div class="footer">
-      <div class=""></div>
-      <div class=""></div>
-      <div class=""></div>
+      <div class="images">
+        <img src="./images/logo-white.svg" alt="logo" id="logo-white">
+        <div class="icons">
+          <img src="./images/icon-facebook.svg" alt="icon-facebook">
+          <img src="./images/icon-youtube.svg" alt="icon-youtube">
+          <img src="./images/icon-twitter.svg" alt="icon-twitter">
+          <img src="./images/icon-pinterest.svg" alt="icon-pinterest">
+          <img src="./images/icon-instagram.svg" alt="icon-instagram">
+        </div>
+      </div>
+      <div class="lists">
+        <ul class="navigation">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About Us</a></li>
+        </ul>
+        <ul class="desc">
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">Community</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+      <div class="contact">
+        <form>
+          <input type="text" name="text" id="text-input" placeholder="Updates in your inbox…">
+          <button class="btn btn-no-shadow">Go</button>
+        </form>
+        <p>Copyright 2020. All Rights Reserved</p>
+      </div>
     </div>
   </footer>
 
@@ -170,21 +197,7 @@
   <!--
 
   </div> 
-
-  Home
-  Pricing
-  Products
-  About Us
-  Careers
-  Community
-  Privacy Policy
-
-  Updates in your inbox…
-  Go
-
-  Copyright 2020. All Rights Reserved
-
-  
+ 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Maciej Kędziora</a>.
