--- a/index.html
+++ b/index.html
@@ -101,16 +101,15 @@
       <div class="people-desc">
         <div class="person">
           <img src="./images/avatar-anisha.png" alt="avatar-anisha">
-          <p class="name"> Anisha Li</p>
+          <p class="name">Anisha Li</p>
           <p class="person-desc">“Manage has supercharged our team’s workflow. The ability to maintain
             visibility on larger milestones at all times keeps everyone motivated.”</p>
         </div>
         <div class="person">
           <img src="./images/avatar-ali.png" alt="avatar-ali">
           <p class="name">Ali Bravo</p>
-          <p class="person-desc"> “We have been able to cancel so many other subscriptions since using
-            Manage. There is no more cross-channel confusion and everyone is much
-            more focused.”</p>
+          <p class="person-desc">“We have been able to cancel so many other subscriptions since using
+            Manage. There is no more cross-channel confusion and everyone is much more focused.”</p>
         </div>
         <div class="person">
           <img src="./images/avatar-richard.png" alt="avatar-richard">
@@ -160,7 +159,7 @@
         </ul>
       </div>
       <div class="contact">
-        <form>
+        <form class="contact-form">
           <input type="text" name="text" id="text-input" placeholder="Updates in your inbox…">
           <button class="btn btn-no-shadow">Go</button>
         </form>
