add media query from 1440px to 1024px

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       </div>
     </section>
 
+    <!-- Cards with people section -->
     <section class="people">
       <h2 class="people-title">What they’ve said</h2>
       <div class="people-desc">
@@ -132,11 +133,13 @@
       <a href="#" class="btn btn-color-reverse">
         <p>Get Started</p>
       </a>
-      <!-- </div> -->
     </section>
   </main>
+
+  <!-- Footer section -->
   <footer>
     <div class="footer">
+      <!-- First section with logo and icons -->
       <div class="images">
         <img src="./images/logo-white.svg" alt="logo" id="logo-white">
         <div class="icons">
@@ -147,6 +150,7 @@
           <a href="https://www.instagram.com"><img src="./images/icon-instagram.svg" alt="icon-instagram"></a>
         </div>
       </div>
+      <!-- Second section with lists -->
       <div class="lists">
         <ul class="navigation">
           <li><a href="#">Home</a></li>
@@ -160,6 +164,7 @@
           <li><a href="#">Privacy Policy</a></li>
         </ul>
       </div>
+      <!-- Third section with contact form -->
       <div class="contact">
         <form class="contact-form">
           <input type="email" name="text" id="text-input" placeholder="Updates in your inbox…">
