--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#careers">Careers</a></li>
         <li><a href="#community">Community</a></li>
       </ul>
-      <a class="btn btn-hover" href="#getstarted">Get Started</a>
+      <a class="btn btn-hover btn-mobile" href="#getstarted">Get Started</a>
     </nav>
 
     <!-- Top header section -->
