add media query from 768px to 450px add slider for mobile (need to fix it)

--- a/index.html
+++ b/index.html
@@ -96,31 +96,40 @@
     <section class="people">
       <h2 class="people-title">What they’ve said</h2>
       <div class="people-desc">
-        <div class="person">
+        <div class="person active-person" id="person1">
           <img src="./images/avatar-anisha.png" alt="avatar-anisha">
           <p class="name">Anisha Li</p>
           <p class="person-desc">“Manage has supercharged our team’s workflow. The ability to maintain
             visibility on larger milestones at all times keeps everyone motivated.”</p>
         </div>
-        <div class="person">
+        <div class="person" id="person2">
           <img src="./images/avatar-ali.png" alt="avatar-ali">
           <p class="name">Ali Bravo</p>
           <p class="person-desc">“We have been able to cancel so many other subscriptions since using
             Manage. There is no more cross-channel confusion and everyone is much more focused.”</p>
         </div>
-        <div class="person">
+        <div class="person" id="person3">
           <img src="./images/avatar-richard.png" alt="avatar-richard">
           <p class="name">Richard Watts </p>
           <p class="person-desc">“Manage allows us to provide structure and process. It keeps us organized
             and focused. I can’t stop recommending them to everyone I talk to!”</p>
         </div>
-        <div class="person">
+        <div class="person" id="person4">
           <img src="./images/avatar-shanai.png" alt="avatar-shanai">
           <p class="name">Shanai Gough</p>
           <p class="person-desc">“Their software allows us to track, manage and collaborate on our projects
             from anywhere. It keeps the whole team in-sync without being intrusive.”</p>
         </div>
       </div>
+
+      <!-- Tags for cards of people -->
+      <div class="people-desc-sliders">
+        <a href="#person1" class="active-slide"></a>
+        <a href="#person2"></a>
+        <a href="#person3"></a>
+        <a href="#person4"></a>
+      </div>
+
       <a href="#" class="btn btn-hover"> Get Started</a>
     </section>
     <section class="simplify">
@@ -170,7 +179,7 @@
           <span class="valid-email">Please insert a valid email.</span>
         </form>
 
-        <p>Copyright 2020. All Rights Reserved</p>
+        <p class="copy">Copyright 2020. All Rights Reserved</p>
       </div>
     </div>
   </footer>
