add media query for mobile less than 449px

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body>
   <!-- Header section -->
   <header>
-    <!-- Navigation -->
+    <!-- Navigation for mid/large screns -->
     <nav class="navbar">
       <img id="logo" src="images/logo.svg" alt="logo">
-      <ul class="links">
+      <img id="hamburger" src="images/icon-close.svg" alt="">
+      <ul class="links links-mobile">
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#product">Product</a></li>
         <li><a href="#aboutus">About Us</a></li>
@@ -26,6 +27,9 @@
       </ul>
       <a class="btn btn-hover btn-mobile" href="#getstarted">Get Started</a>
     </nav>
+
+    <!-- Navigation for mobile -->
+
 
     <!-- Top header section -->
     <section class="header-top">
