add all media query for mobile -> Done

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Navigation for mid/large screns -->
     <nav class="navbar">
       <img id="logo" src="images/logo.svg" alt="logo">
-      <img id="hamburger" src="images/icon-close.svg" alt="">
+      <img id="hamburger" src="images/icon-hamburger.svg" alt="icon-hamburger">
+      <img id="close" src="images/icon-close.svg" alt="icon-close">
       <ul class="links links-mobile">
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#product">Product</a></li>
@@ -65,7 +66,9 @@
             <p class="tag-p">01</p>
           </div>
           <div class="points-div">
-            <p class="point-title">Track company-wide progress</p>
+            <div class="pt">
+              <p class="point-title">Track company-wide progress</p>
+            </div>
             <p class="point-description">See how your day-to-day tasks fit into the wider vision. Go from
               tracking progress at the milestone level all the way done to the
               smallest of details. Never lose sight of the bigger picture again.</p>
@@ -76,7 +79,9 @@
             <p class="tag-p">02</p>
           </div>
           <div class="points-div">
-            <p class="point-title">Advanced built-in reports</p>
+            <div class="pt">
+              <p class="point-title">Advanced built-in reports</p>
+            </div>
             <p class="point-description">Set internal delivery estimates and track progress toward company
               goals. Our customisable dashboard helps you build out the reports
               you need to keep key stakeholders informed.</p>
@@ -87,7 +92,9 @@
             <p class="tag-p">03</p>
           </div>
           <div class="points-div">
-            <p class="point-title">Everything you need in one place</p>
+            <div class="pt">
+              <p class="point-title">Everything you need in one place</p>
+            </div>
             <p class="point-description">Stop jumping from one service to another to communicate, store files,
               track tasks and share documents. Manage offers an all-in-one team
               productivity solution.</p>
