add slider for mobile

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
 
       <!-- Tags for cards of people -->
       <div class="people-desc-sliders">
-        <a href="#person1" class="active-slide"></a>
-        <a href="#person2"></a>
-        <a href="#person3"></a>
-        <a href="#person4"></a>
+        <button class="person-buttons active-slide"></button>
+        <button class="person-buttons "></button>
+        <button class="person-buttons "></button>
+        <button class="person-buttons "></button>
       </div>
 
       <a href="#" class="btn btn-hover"> Get Started</a>
@@ -229,7 +229,8 @@
     Coded by <a href="#">Maciej Kędziora</a>.
   </div>
 -->
-  <script src="./js/app.js"></script>
+  <script src="./js/slider.js"></script>
+  <script src="./js/formValidation.js"></script>
 </body>
 
 </html>
