style hamburger menu. Fix styles and add js file for match query. Last commit.

--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
   </footer>
 
   <script src="./js/slider.js"></script>
-  <script src="./js/formValidation.js"></script>
   <script src="./js/mobileMenu.js"></script>
+  <script src="./js/startQuery.js"></script>
+  <script src="./js/formValidation.js"></script>
 </body>
 
 </html>
